--- a/index.css
+++ b/index.css
@@ -2,3 +2,47 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    padding:0;
+    margin:0;
+    box-sizing: border-box;
+}
+
+.shimmer-container{
+    display: flex;
+    flex-wrap:wrap;
+}
+
+.shimmer-cards{
+    width:200px;
+    height:200px;
+    background-color: #f5f5f5;
+    margin: 10px;
+    border-radius: 4px;
+    position: relative;
+    overflow: hidden;
+}
+
+.shimmer-cards::before{
+    content: "";
+    position:absolute;
+    top:0;
+    left:-100%;
+    width:200%;
+    height: 100%;
+    background: linear-gradient(to right,transparent 0%,rgba(224,224,224,0.5) 25%,rgba(224,224,224,0.8) 50%,rgba(224,224,224,0.5) 75%,transparent 100%);
+    animation: shimmer 1.5s infinite;
+}
+
+@keyframes shimmer{
+    0% {
+        transform: translateX(-100%);
+
+    }
+    50%{
+        transition:  translateX(100%);
+    }
+    100%{
+        transition: translateY(100%);
+    }
+}
